页面改字段状态
页面改字段状态

--- a/Views/Declare/OnelineIn_List.cshtml
+++ b/Views/Declare/OnelineIn_List.cshtml
@@ -88,7 +88,7 @@
                     <th data-options="field:'FOONOBJ',width:190,sortable:true">FOO报检服务号</th>
                     <th data-options="field:'CODE',width:80,sortable:true">业务编号</th>
                     <th data-options="field:'CUSTOMDISTRICTCODE',width:80,sortable:true">关区代码</th>
-                    <th data-options="field:'LAWCONDITION',width:80,sortable:true">是否法检</th>
+                    <th data-options="field:'LAWCONDITION',width:80,sortable:true,formatter:formatLAWCONDITION">是否法检</th>
                 </tr>
             </thead>
         </table>
