--- a/Views/Declare/OnelineIn_List.cshtml
+++ b/Views/Declare/OnelineIn_List.cshtml
@@ -63,6 +63,7 @@
                     <th data-options="field:'text',width:80,sortable:true">报关单号</th>
                     <th data-options="field:'text',width:80,sortable:true">海关通关状态</th>
                     <th data-options="field:'text',width:80,sortable:true">关务状态</th>
+                    <th data-options="field:'BUSITYPE',width:100">业务类型</th>
                 </tr>
             </thead>
             <thead>
@@ -84,8 +85,7 @@
                     <th data-options="field:'DANZHENGFANGXINGUSERNAME',width:80,sortable:true">单证放行人</th>
                     <th data-options="field:'SHIWUFANGXINGUSERNAME',width:80,sortable:true">实物放行人</th>
                     <th data-options="field:'FWONO',width:180,sortable:true">FWO订单号</th>
-                    <th data-options="field:'FOONO',width:190,sortable:true">FOO报关服务号</th>
-                    <th data-options="field:'FOONOBJ',width:190,sortable:true">FOO报检服务号</th>
+                    <th data-options="field:'FOONO',width:190,sortable:true">FOO报关服务号</th> 
                     <th data-options="field:'CODE',width:80,sortable:true">业务编号</th>
                     <th data-options="field:'CUSTOMDISTRICTCODE',width:80,sortable:true">关区代码</th>
                     <th data-options="field:'LAWCONDITION',width:80,sortable:true,formatter:formatLAWCONDITION">是否法检</th>
