update one line in

--- a/Views/Declare/OnelineIn_List.cshtml
+++ b/Views/Declare/OnelineIn_List.cshtml
@@ -59,7 +59,7 @@
             <thead data-options="frozen:true">
                 <tr>
                     <th data-options="field: 'ID',width:80,checkbox:true"></th>
-                    <th data-options="field:'BUSIUNITNAME',width:150,sortable:true,">收货人</th>
+                    <th data-options="field:'BUSIUNITNAME',width:200">收货人</th>
                     <th data-options="field:'text',width:80,sortable:true">报关单号</th>
                     <th data-options="field:'text',width:80,sortable:true">海关通关状态</th>
                     <th data-options="field:'text',width:80,sortable:true">关务状态</th>
