--- a/Views/Common/SyncFoo_List.cshtml
+++ b/Views/Common/SyncFoo_List.cshtml
@@ -124,9 +124,9 @@
                         ids += recs[i].get("ID") + ",";
                     }
                 }
-
+                debugger;
                 $.ajax({
-                    url: '/Order/testtm',// 跳转到 action
+                    url: '/Interface/testtm',// 跳转到 action
                     data: {
                         'ids': ids
                     },
