--- a/Views/Common/SyncFoo_List.cshtml
+++ b/Views/Common/SyncFoo_List.cshtml
@@ -67,7 +67,7 @@
             { header: '合同发票号', dataIndex: 'CONTRACTNO', width: 130 },
             { header: '总单号', dataIndex: 'TOTALNO', width: 100 },
             { header: '分单号', dataIndex: 'DIVIDENO', width: 100 },
-            { header: '木质包装', dataIndex: '木质包装', width: 100 },
+            { header: '木质包装', dataIndex: 'WOODPACKINGID', width: 100 },
             { header: '件数', dataIndex: 'GOODSNUM', width: 100 },
             { header: '重量', dataIndex: 'GOODSWEIGHT', width: 100 },
             { header: '申报方式', dataIndex: 'REPWAYID', width: 100 },
