--- a/Views/Common/SyncFoo_List.cshtml
+++ b/Views/Common/SyncFoo_List.cshtml
@@ -11,7 +11,7 @@
               'ENTRUSTREQUEST', 'ENTRUSTTYPEID', 'MANIFEST', 'SHIPNAME', 'FILGHTNO', 'LADINGBILLNO', 'TRADEWAYCODES',
               'DECLWAY', 'PACKKIND', 'ARRIVEDNO', 'FIRSTLADINGBILLNO', 'SECONDLADINGBILLNO', 'GOODSTYPEID', 'BUSIUNITNAME',
               'CREATEUSERNAME', 'SPECIALRELATIONSHIP', 'PRICEIMPACT', 'PAYPOYALTIES', 'WEIGHTCHECK', 'CHECKEDGOODSNUM',
-              'CHECKEDWEIGHT', 'FWONO', 'FOONO', 'SFGOODSUNIT', 'CONTAINERTRUCKS', 'GOODSXT', 'ISPREDECLARE', 'INVOICENO',
+              'CHECKEDWEIGHT', 'FWONO', 'FOONO', 'FGOODSUNIT', 'SGOODSUNIT', 'ALLOWDECLARE', 'CONTAINERTRUCKS', 'GOODSXT', 'ISPREDECLARE', 'INVOICENO',
               'ISCHECKEDWEIGHT'
             ],
             pageSize: 20,
@@ -97,7 +97,9 @@
             { header: '是否需要重量确认', dataIndex: 'WEIGHTCHECK', width: 150 },
             { header: '确认件数', dataIndex: 'CHECKEDGOODSNUM', width: 100 },
             { header: '确认重量', dataIndex: 'CHECKEDWEIGHT', width: 100 },
-            { header: '收发货单位', dataIndex: 'SFGOODSUNIT', width: 200 },
+            { header: '发货单位+编码', dataIndex: 'FGOODSUNIT', width: 200 },
+            { header: '收货单位+编码', dataIndex: 'SGOODSUNIT', width: 200 },
+            { header: '报关可执行', dataIndex: 'ALLOWDECLARE', width: 200 },
             { header: '集装箱及车辆信息', dataIndex: 'CONTAINERTRUCKS', width: 150 },
             { header: '货物形态', dataIndex: 'GOODSXT', width: 100 },
             { header: '是否提前报关', dataIndex: 'ISPREDECLARE', width: 100 },
