update load  order function

--- a/Views/Inspect/DomesticKnot_List.cshtml
+++ b/Views/Inspect/DomesticKnot_List.cshtml
@@ -61,7 +61,7 @@
 <div class="ibox-content">
     <div class="table-responsive">
         <table id="datagrid" class="easyui-datagrid" title="国内结转" style="height:auto;min-height:500px;max-height:800px"
-               data-options="queryParams:{BUSITYPE:11}">
+               data-options="queryParams:{BUSITYPE:'BLCBJ'}">
             <thead data-options="frozen:true">
                 <tr>
                     <th data-options="field: 'ID',width:80,checkbox:true"></th>
@@ -88,7 +88,7 @@
                     <th data-options="field:'SHANDANKAISHITIME',width:100,sortable:true">删单时间</th>
                     <th data-options="field:'GAIDANKAISHITIME',width:100,sortable:true">改单时间</th>
                     <th data-options="field:'FWONO',width:180,sortable:true">FWO号</th>
-                    <th data-options="field:'FOONOBJ',width:180,sortable:true">FOO报检服务号</th>                   
+                    <th data-options="field:'FOONOBJ',width:180,sortable:true">FOO报检服务号</th>
                 </tr>
             </thead>
         </table>
