--- a/Views/Inspect/OnelineIn_List.cshtml
+++ b/Views/Inspect/OnelineIn_List.cshtml
@@ -47,7 +47,7 @@
 <div class="ibox-content">
     <div class="table-responsive">
         <table id="datagrid" class="easyui-datagrid" title="一线进口" style="height:auto;min-height:500px;max-height:800px"
-               data-options="queryParams:{BUSITYPE:11}">
+               data-options="queryParams:{BUSITYPE:'ONEINBJ'}">
             <thead data-options="frozen:true">
                 <tr>
                     <th data-options="field: 'ID',width:80,checkbox:true"></th>
