--- a/Views/Declare/OnelineOut_List.cshtml
+++ b/Views/Declare/OnelineOut_List.cshtml
@@ -80,6 +80,7 @@
         <div id="tb">
             <div class="tb_search">
                 <form id="searchform" method="post">
+                    <input type="hidden" name="BUSITYPE" value="ONEOUT" />
                     <table>
                         <tr>
                             <td class="search_margin">
