--- a/Views/Inspect/DomesticKnot_Edit.cshtml
+++ b/Views/Inspect/DomesticKnot_Edit.cshtml
@@ -28,7 +28,7 @@
 
                     <td>
                         <label>业务类型:</label>
-                        <input class="easyui-textbox" type="text" name="text" disabled="disabled" />
+                        <input class="easyui-textbox" type="text" name="BUSITYPE" disabled="disabled" />
                     </td>
 
                 </tr>
