木质包装字段显示更改

--- a/Views/Inspect/OnelineIn_List.cshtml
+++ b/Views/Inspect/OnelineIn_List.cshtml
@@ -71,7 +71,7 @@
                     <th data-options="field:'CONTRACTNO',width:100,sortable:true">合同/发票号</th>
                     <th data-options="field:'text',width:100,sortable:true">通关单标志</th>
                     <th data-options="field:'text',width:100,sortable:true">通关单张数</th>
-                    <th data-options="field:'WOODPACKINGID',width:100,sortable:true">木质包装</th>
+                    <th data-options="field:'WOODPACKINGID',width:100,sortable:true,formatter:formatWOODPACKINGID">木质包装</th>
                     <th data-options="field:'BAOJIANTIME',width:100,sortable:true">报检时间</th>
                     <th data-options="field:'BAOJIANFANGXINGTIME',width:100,sortable:true">报检放行时间</th>
                     <th data-options="field:'CHAYANZHILINGXIAFATIME',width:100,sortable:true">查验时间</th>
