--- a/Views/Abnormalmodule/AbnormallogEdit.cshtml
+++ b/Views/Abnormalmodule/AbnormallogEdit.cshtml
@@ -162,7 +162,7 @@
                 if (data.Success) {
                     //$.messager.alert('成功', '保存成功');
                     $('#AbnormallogEdit').dialog('close');
-                    $('#Abnormallogdatagrid').datagrid('reload');
+                    $('#datagrid').datagrid('reload');
                 } else {
                     $.messager.alert('失败', '保存失败');
                 }
