异常登记导出

--- a/Views/Abnormalmodule/Abnormallog.cshtml
+++ b/Views/Abnormalmodule/Abnormallog.cshtml
@@ -144,7 +144,7 @@
                data-options="queryParams:{}">
             <thead>
                 <tr>
-                    <th data-options="field: 'ck',width:80, checkbox: true"></th>
+                    <th data-options="field: 'ID',width:80,checkbox:true"></th>
                     <th data-options="field:'CODE',width:150,sortable:true">业务编号</th>
                     <th data-options="field:'YCNUM',width:70,sortable:true">异常数量</th>
                     <th data-options="field:'CLNUM',width:70,sortable:true">处理数量</th>
@@ -238,7 +238,7 @@
             <div class="tb_but">
                 <div class="but_left">
                     <a class="btn btn-primary btn-xs" href="javascript:void(0)" onclick="Add_Abnormal()"><i class="icon-plus"></i> 添加异常</a>
-                    <a class="btn btn-primary btn-xs" href="javascript:void(0)" onclick="reset_form()"><i class="fa fa-share-square-o" aria-hidden="true"></i> 导出</a>
+                    <a class="btn btn-primary btn-xs" href="javascript:void(0)" onclick="export_form()"><i class="fa fa-share-square-o" aria-hidden="true"></i> 导出</a>
                 </div>
                 <div class="but_right">
                     <a class="btn btn-primary btn-xs" href="javascript:void(0)" onclick="search_form()"><i class="icon-search"></i> 搜索</a>
