--- a/Views/Common/SyncFoo_List.cshtml
+++ b/Views/Common/SyncFoo_List.cshtml
@@ -6,7 +6,7 @@
 
 
         var store = Ext.create('Ext.data.JsonStore', {
-            fields: ['ID', 'CODE', 'BUSITYPE', 'CUSNO', 'CONTRACTNO', 'TOTALNO', 'DIVIDENO', 'WOODPACKINGID', 'GOODSNUM',
+            fields: ['ID', 'CODE','TIME', 'ONLYCODE', 'BUSITYPE', 'CUSNO', 'CONTRACTNO', 'TOTALNO', 'DIVIDENO', 'WOODPACKINGID', 'GOODSNUM',
               'GOODSWEIGHT', 'REPWAYID', 'CUSTOMDISTRICTCODE', 'PORTCODE', 'REPUNITCODE', 'INSPUNITCODE', 'CREATETIME',
               'ENTRUSTREQUEST', 'ENTRUSTTYPEID', 'MANIFEST', 'SHIPNAME', 'FILGHTNO', 'LADINGBILLNO', 'TRADEWAYCODES',
               'DECLWAY', 'PACKKIND', 'ARRIVEDNO', 'FIRSTLADINGBILLNO', 'SECONDLADINGBILLNO', 'GOODSTYPEID', 'BUSIUNITNAME',
@@ -14,7 +14,7 @@
               'CHECKEDWEIGHT', 'FWONO', 'FOONO', 'FGOODSUNIT', 'SGOODSUNIT', 'ALLOWDECLARE', 'CONTAINERTRUCKS', 'GOODSXT', 'ISPREDECLARE', 'INVOICENO',
               'ISCHECKEDWEIGHT'
             ],
-            pageSize: 50,
+            pageSize: 500,
             proxy: {
                 type: 'ajax',
                 url: '/Common/LoadFooList',
@@ -59,8 +59,10 @@
             enableColumnHide: false,
             columns: [
             { xtype: 'rownumberer', width: 35 },
+            { header: '唯一号', dataIndex: 'ONLYCODE', width: 150 },
             { header: 'FWO号', dataIndex: 'FWONO', width: 200 },
             { header: 'FOO指令号', dataIndex: 'FOONO', width: 200 },
+            { header: '发送时间', dataIndex: 'TIME', width: 200 },
             { header: '订单号', dataIndex: 'CODE', width: 200 },
             { header: 'ID', dataIndex: 'ID', hidden: true },
             { header: '业务类型', dataIndex: 'BUSITYPE', width: 150 },
@@ -76,7 +78,6 @@
             { header: '口岸', dataIndex: 'PORTCODE', width: 100 },
             { header: '报关申报单位', dataIndex: 'REPUNITCODE', width: 300 },
             { header: '报检申报单位', dataIndex: 'INSPUNITCODE', width: 300 },
-            { header: '发送时间', dataIndex: 'CREATETIME', width: 130 },
             { header: '订单需求', dataIndex: 'ENTRUSTREQUEST', width: 100 },
             { header: '委托类型', dataIndex: 'ENTRUSTTYPEID', width: 100 },
             { header: '载货清单', dataIndex: 'MANIFEST', width: 100 },
@@ -99,6 +100,7 @@
             { header: '确认件数', dataIndex: 'CHECKEDGOODSNUM', width: 100 },
             { header: '确认重量', dataIndex: 'CHECKEDWEIGHT', width: 100 },
             { header: '发货单位+编码', dataIndex: 'FGOODSUNIT', width: 200 },
+            { header: '委托时间', dataIndex: 'CREATETIME', width: 130 },
             { header: '收货单位+编码', dataIndex: 'SGOODSUNIT', width: 200 },
             { header: '报关可执行', dataIndex: 'ALLOWDECLARE', width: 200 },
             { header: '集装箱及车辆信息', dataIndex: 'CONTAINERTRUCKS', width: 150 },
